# emotion_seperation

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  FIXED_SUMMARY.md  INDEX.md  INSTALL.md  INSTALLATION_FIXED.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX.md  README.md  TROUBLESHOOTING.md  UV_FIX.md  WORKFLOW.md  batch_process.py  config.yaml  example_usage.py  install.ps1  install.sh  pyproject.toml  requirements.txt  setup_check.py  test_pipeline.py
src/: __init__.py  active_speaker.py  av_match.py  diarize.py  emotion_change.py  export_clips.py  extract_media.py  faces_track_cluster.py  pipeline.py  utils.py
